@@ -4,6 +4,7 @@
 BZFlag 1.11.x (development)
 ---------------------------
 
+* Added /quit command - Angelina Carlton
 * Display player addr on join to admins - Sean Morrison
 * Make -debug a public client option - Frank Thilo
 * Communicate autopilot state, display in scoreboard - Frank Thilo
